--- a/JavaScript/20230418/style.css
+++ b/JavaScript/20230418/style.css
@@ -1,18 +1,25 @@
+:root {
+  --item-number: 8;
+  --item-width: 240px;
+  --translateZ: calc(var(--item-width) * var(--item-number) / 2 / 3.14)
+}
+
 #app {
   height: 100vh;
-  width: 100vh;
-  perspective: 1600px; /* 깊이감 */
+  width: 100vw;
+  perspective: 1600px;
 }
 
 .list-item {
   position: fixed;
-  width: 340px;
+  width: var(--item-width);
   height: 400px;
   padding: 0;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) rotateY(0deg);
   transform-style: preserve-3d;
+  transition: .3s;
 }
 
 .list-item li {
@@ -21,48 +28,14 @@
   left: 0;
   width: 100%;
   height: 100%;
-  border: 1px solid #bdbdbd;
+  border: 1px solid #BDBDBD;
   border-radius: 10px;
   list-style: none;
-  backface-visibility: hidden; /* 뒷면을 보이게 하는 값을 가린다.*/
-}
-
-/* 반지름 공식 : 원의 둘레/ 2 / 3.14 */
-.list-item li:nth-child(1) {
-  transform: rotateY(0) translateZ(calc(340px * 7 / 2 / 3.14));
-}
-
-.list-item li:nth-child(2) {
-  transform: rotateY(calc(360deg / 7)) translateZ(calc(340px * 7 / 2 / 3.14));
-}
-
-.list-item li:nth-child(3) {
-  transform: rotateY(calc(360deg / 7 * 2))
-    translateZ(calc(340px * 7 / 2 / 3.14));
-}
-
-.list-item li:nth-child(4) {
-  transform: rotateY(calc(360deg / 7 * 3))
-    translateZ(calc(340px * 7 / 2 / 3.14));
-}
-
-.list-item li:nth-child(5) {
-  transform: rotateY(calc(360deg / 7 * 4))
-    translateZ(calc(340px * 7 / 2 / 3.14));
-}
-
-.list-item li:nth-child(6) {
-  transform: rotateY(calc(360deg / 7 * 5))
-    translateZ(calc(340px * 7 / 2 / 3.14));
-}
-
-.list-item li:nth-child(7) {
-  transform: rotateY(calc(360deg / 7 * 6))
-    translateZ(calc(340px * 7 / 2 / 3.14));
+  backface-visibility: hidden;
 }
 
 .list-item img {
+  object-fit: contain;
   width: 100%;
   height: 100%;
-  object-fit: contain; /*컨테이너 크기에 맞게*/
 }
