--- a/develop/메모장/style.css
+++ b/develop/메모장/style.css
@@ -24,18 +24,19 @@
 
   .txt-btn {
     display: flex;
-    justify-content: end;
     margin-bottom: 20px;
   }
 
   .fontbold {
     width: 100px;
-    margin-right: 20px;
     cursor: pointer;
+    margin-left: 250px;
   }
 
   .fontred {
     width: 100px;
+    cursor: pointer;
+    margin: 0.1px;
   }
 
   main {
@@ -92,19 +93,37 @@
     color: #fff;
     font-size: 20px;
     border: 1px solid #808080;
+    margin: auto;
+    cursor: pointer;
   }
 
   #display {
-    width: 509px;
+    width: 1500px;
     padding: 0;
   }
 
   ul {
     display: grid;
-    grid-template-columns: repeat(2,1fr);
-    grid-gap: 10px;
+    grid-template-columns: repeat(3,1fr);
+    grid-gap: 100px;
+    list-style: none;
   }
 
   ul li {
+    text-align: center;
+    width: 300px;
+    padding: 40px;
+    border-radius: 20px;
+    border: 1.5px solid black;
 
   }
+
+  ul li p,
+  ul li h3 {
+    margin-bottom: 15px;
+  }
+
+  ul li p {
+    font-size: 18px;
+  }
+
