--- a/develop/메모장/style.css
+++ b/develop/메모장/style.css
@@ -1,180 +1,153 @@
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    border: none;
-    font-family: 'Gamja Flower', cursive;
-    
-  }
-  .wrap {
-    height: 250px;
-    background: #ddd;
-    text-align: center;
-    padding: 50px;
-  }
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  border: none;
+  font-family: "Gamja Flower", cursive;
+}
+.wrap {
+  background: #ddd;
+  text-align: center;
+  padding: 50px;
+}
 
-  .wrap .title {
-    font-size: 60px;
-    margin-bottom: 30px;
-  }
+.wrap .title {
+  font-size: 60px;
+  padding-bottom: 30px;
+}
 
-  .wrap .subtxt {
-    font-size: 25px;
-  }
+.wrap .subtxt {
+  font-size: 25px;
+}
 
-  .txt-btn {
-    display: flex;
-    margin-bottom: 20px;
-  }
+main {
+  display: flex;
+  align-items: center;
+}
 
-  .fontbold {
-    width: 100px;
-    cursor: pointer;
-    margin-left: 250px;
-  }
+main section {
+  padding: 50px;
+}
 
-  .fontred {
-    width: 100px;
-    cursor: pointer;
-    margin: 0.1px;
-  }
+input {
+  display: block;
+  width: 500px;
+  height: 55px;
+  padding: 12px;
+  background: #fbf6be;
+  border: 1.5px dashed #808080;
+  font-size: 19px;
+}
 
+input::placeholder,
+textarea::placeholder {
+  color: #484848;
+}
+
+.txt-btn {
+  display: flex;
+  padding: 20px 0;
+  justify-content: end;
+}
+
+.fontbold {
+  width: 100px;
+  cursor: pointer;
+  margin-right: 20px;
+}
+
+.fontred {
+  width: 100px;
+  cursor: pointer;
+  margin: 0;
+}
+
+textarea {
+  display: block;
+  width: 500px;
+  height: 250px;
+  margin-bottom: 30px;
+  padding: 15px 12px;
+  background: #fbf6be;
+  border: 1.5px dashed #808080;
+  font-size: 20px;
+}
+
+textarea.font-weight-bold {
+  font-weight: bold;
+}
+
+textarea.font-color-red {
+  color: red;
+}
+
+button {
+  display: block;
+  width: 150px;
+  height: 40px;
+  border-radius: 15px;
+  background: #f4bf00d2;
+  color: #fff;
+  font-size: 20px;
+  border: 1px solid #808080;
+  margin: auto;
+  cursor: pointer;
+}
+
+ul {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 50px;
+  list-style: none;
+}
+
+ul li {
+  width: 280px;
+  padding: 40px;
+  border-radius: 30px;
+  border: 2px dashed #484848;
+}
+
+ul li h3 {
+  margin-bottom: 10px;
+}
+
+ul li a {
+  margin-bottom: 10px;
+  display: block;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+ul li p {
+  margin: 10px 0;
+  font-size: 20px;
+}
+
+ul li button {
+  margin-top: 20px;
+}
+
+
+
+
+@media screen and (max-width: 768px) {
   main {
-    margin-top: 50px;
-    display: flex;
-    justify-content: center;
+    flex-direction: column;
   }
 
-  main section {
-    padding: 100px;
-
-  }
-
-  input {
-    display: block;
-    width: 500px;
-    height:55px;
-    margin-bottom: 20px;
-    padding: 12px;
-    background: #FBF6BE;
-    border: 1.5px dashed #808080;
-    font-size: 19px;
-  }
-
-  input::placeholder,
-  textarea::placeholder {
-    color : #484848
-  }
-
+  input,
   textarea {
-    display: block;
-    width: 500px;
-    height: 250px;
-    margin-bottom: 30px;
-    padding: 15px 12px;
-    background: #FBF6BE;
-    border: 1.5px dashed #808080;
-    font-size: 21px;
-  }
-
-  textarea.font-weight-bold {
-    font-weight: bold;
-  }
-
-  textarea.font-color-red {
-    color: red;
-  }
-
-  button {
-    display: block;
-    width: 150px;
-    height: 40px;
-    border-radius: 15px;
-    background: #f4bf00d2;
-    color: #fff;
-    font-size: 20px;
-    border: 1px solid #808080;
-    margin: auto;
-    cursor: pointer;
-  }
-
-  #display {
-    width: 1500px;
+    max-width: 400px;
   }
 
   ul {
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
-    grid-gap: 100px;
-    list-style: none;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 30px;
   }
 
   ul li {
-    text-align: center;
-    width: 300px;
-    padding: 50px;
-    border-radius: 20px;
-    border: 1.5px dashed #696969;
-
+    max-width: 230px;
   }
-
-  ul li p,
-  ul li h3 {
-    margin-bottom: 15px;
-  }
-
-  ul li h3 {
-    margin-top: 10px;
-  }
-
-  ul li p {
-    font-size: 20px;
-  }
-
-
-  @media screen and (max-width: 768px) {
-
-   .wrap .title {
-      font-size: 50px;
-    }
-
-    main {
-      flex-direction: column;
-      align-items: center;
-    }
-    
-    main section {
-      padding: 50px;
-    }
-
-
-    main textarea {
-      margin: 20px;
-    }
-    
-    input {
-      width: 90%;
-      margin: 0 auto 20px;
-      font-size: 16px;
-    }
-    
-    textarea {
-      width: 90%;
-      margin-bottom: 30px;
-      font-size: 18px;
-    }
-
-    ul {
-      grid-template-columns: repeat(1,1fr);
-      justify-items: center;
-      grid-gap: 50px;
-    }
-    
-    ul li {
-      width: 100%;
-      padding: 30px;
-      font-size: 16px;
-    }
-
-  }
-  
+}
